chore: bump version to v1.0.0

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
 name = "smsman-studio"
-version = "0.1.0"
-description = "A Tauri App"
-authors = ["you"]
-edition = "2021"
+version = "1.0.0"
+description = "Desktop client for SMS-man API"
+authors = ["tickernelz"]
+license = "MIT"
+repository = "https://github.com/tickernelz/smsman-studio"
+edition = "2026"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
